<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballscorecounter.MainActivity">

    <ImageView
        android:id="@+id/mainBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundfield" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/aLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aTittleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorATeamTextBackground"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:padding="12dp"
                android:text="@string/teamA"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aScoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorATeamScoreBackground"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/StartingScore"
                android:textColor="@android:color/white"
                android:textSize="56sp" />

            <Button
                android:id="@+id/aTouchdownButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="33dp"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:onClick="scoredTouchDown"
                android:text="@string/touchdown"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/aPATLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/aPAT1Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="scoredPAT1"
                    android:text="@string/extra1Point"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/aPAT2Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="scored2"
                    android:text="@string/extra2Point"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/aFieldGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="33dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:onClick="scoredFieldGoal"
                android:text="@string/fieldGoal"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/aSafetyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:onClick="scored2"
                android:text="@string/safety"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/bTittleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBTeamTextBackground"
                android:fontFamily="sans-serif"
                android:gravity="right"
                android:padding="12dp"
                android:text="@string/teamB"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bScoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBTeamScoreBackground"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/StartingScore"
                android:textColor="#FFFFFF"
                android:textSize="56sp" />

            <Button
                android:id="@+id/bTouchdownButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:onClick="scoredTouchDown"
                android:text="@string/touchdown"
                android:textColor="#ffFFFF"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/bPATLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bPAT1Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="scoredPAT1"
                    android:text="@string/extra1Point"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/bPAT2Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="scored2"
                    android:text="@string/extra2Point"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/bFieldGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:onClick="scoredFieldGoal"
                android:text="@string/fieldGoal"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bSafetyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:onClick="scored2"
                android:text="@string/safety"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@android:color/transparent"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textSize="24sp" />

</RelativeLayout>